--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppExtensions.cs" />
+    <Compile Include="RequestHandlerExtensions.cs" />
     <Compile Include="BufferedBody.cs" />
     <Compile Include="HttpEndpoint.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
