Adding tests for using the same stub endpoint

--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -50,8 +50,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class2.cs" />
+    <Compile Include="HttpEndPointTests.cs" />
+    <Compile Include="MultipleTestsUsingTheSameStubServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemUnderTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
