--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -58,7 +58,9 @@
     <Compile Include="HttpEndPointTests.cs" />
     <Compile Include="MultipleTestsUsingTheSameStubServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SameServerUsingDifferentBaseUrlsTests.cs" />
     <Compile Include="SystemUnderTest.cs" />
+    <Compile Include="UsingMultipleServersTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
