--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="HttpEndPointTests.cs" />
     <Compile Include="MultipleTestsUsingTheSameStubServerAndDifferentUris.cs" />
+    <Compile Include="MultipleTestsUsingTheSameStubServerWithDifferentHttpMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SameServerUsingDifferentBaseUrlsTests.cs" />
     <Compile Include="SystemUnderTest.cs" />
