Added queryparams to stub by query stirng parameters and unit tests

--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -65,6 +65,7 @@
     <Compile Include="SameServerUsingDifferentBaseUrlsTests.cs" />
     <Compile Include="SystemUnderTest.cs" />
     <Compile Include="UsingMultipleServersTests.cs" />
+    <Compile Include="UsingTheSameStubServerAndDifferentQueryRequestParams.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.local.config">
