--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -42,18 +42,21 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EndpointMatchingRule.cs" />
     <Compile Include="HttpHeaderNames.cs" />
     <Compile Include="HttpServer.cs" />
     <Compile Include="HttpServerBuilder.cs" />
     <Compile Include="HttpServerFactory.cs" />
     <Compile Include="IHttpMockRepository.cs" />
     <Compile Include="IHttpServerBuilder.cs" />
+    <Compile Include="IMatchingRule.cs" />
     <Compile Include="IStubHttp.cs" />
     <Compile Include="IStubResponse.cs" />
     <Compile Include="RequestHandlerExtensions.cs" />
