--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -50,11 +50,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointMatchingRule.cs" />
+    <Compile Include="FileResponseBody.cs" />
     <Compile Include="HttpHeaderNames.cs" />
     <Compile Include="HttpServer.cs" />
     <Compile Include="HttpServerBuilder.cs" />
     <Compile Include="HttpServerFactory.cs" />
     <Compile Include="IHttpMockRepository.cs" />
+    <Compile Include="IHttpServer.cs" />
     <Compile Include="IHttpServerBuilder.cs" />
     <Compile Include="IMatchingRule.cs" />
     <Compile Include="IStubResponse.cs" />
