--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -38,6 +38,7 @@
     <Reference Include="Kayak">
       <HintPath>..\..\lib\Kayak.dll</HintPath>
     </Reference>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL" />
     <Reference Include="nunit.framework">
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
     </Reference>
@@ -63,7 +64,7 @@
     <Compile Include="UsingTheSameStubServerAndDifferentQueryRequestParams.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App.local.config">
+    <Content Include="App.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="res\transcode-input.mp3">
