extract query param match class

--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -57,6 +57,7 @@
     <Compile Include="IHttpServer.cs" />
     <Compile Include="IMatchingRule.cs" />
     <Compile Include="IStubResponse.cs" />
+    <Compile Include="QueryParamMatch.cs" />
     <Compile Include="RequestHandlerExtensions.cs" />
     <Compile Include="BufferedBody.cs" />
     <Compile Include="HttpMockRepository.cs" />
