--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BufferedConsumer.cs" />
     <Compile Include="EndpointMatchingRule.cs" />
     <Compile Include="FileResponseBody.cs" />
     <Compile Include="HttpHeaderNames.cs" />
@@ -59,8 +60,10 @@
     <Compile Include="IHttpMockRepository.cs" />
     <Compile Include="IHttpServer.cs" />
     <Compile Include="IMatchingRule.cs" />
+    <Compile Include="IRequestHandler.cs" />
+    <Compile Include="IRequestStub.cs" />
     <Compile Include="IStubResponse.cs" />
-    <Compile Include="RequestHandlerExtensions.cs" />
+    <Compile Include="RequestHandlerExpectExtensions.cs" />
     <Compile Include="BufferedBody.cs" />
     <Compile Include="HttpMockRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
