Implement AssertWasNotCalled Swapped around parameters for FindHandler

--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="AssemblySetup.cs" />
     <Compile Include="EndpointsReturningFilesTests.cs" />
     <Compile Include="HttpEndPointTests.cs" />
+    <Compile Include="HttpExpectationTests.cs" />
     <Compile Include="MultipleTestsUsingTheSameStubServerAndDifferentUris.cs" />
     <Compile Include="MultipleTestsUsingTheSameStubServerWithDifferentHttpMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
