--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -70,7 +70,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestHandler.cs" />
     <Compile Include="RequestProcessor.cs" />
-    <Compile Include="RequestVerifier.cs" />
+    <Compile Include="RequestWasCalled.cs" />
+    <Compile Include="RequestWasNotCalled.cs" />
     <Compile Include="SchedulerDelegate.cs" />
     <Compile Include="ResponseBuilder.cs" />
     <Compile Include="StubNotFoundResponse.cs" />
