--- a/src/HttpMock.Unit.Tests/HttpMock.Unit.Tests.csproj
+++ b/src/HttpMock.Unit.Tests/HttpMock.Unit.Tests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="EndpointMatchingRuleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestHandlerTests.cs" />
     <Compile Include="RequestProcessorTests.cs" />
   </ItemGroup>
   <ItemGroup>
