HttpServerTests: don't use a certain port to test, but find an available one
This is because that port may be in use by something else in the host
where the tests run (internally in 7d this was failing in buildagent009
but not in buildagent001!).

--- a/src/HttpMock.Unit.Tests/HttpMock.Unit.Tests.csproj
+++ b/src/HttpMock.Unit.Tests/HttpMock.Unit.Tests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="EndpointMatchingRuleTests.cs" />
     <Compile Include="HttpServerTests.cs" />
+    <Compile Include="PortHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestHandlerTests.cs" />
     <Compile Include="RequestProcessorTests.cs" />
