HttpServerFactory: allow getting a 2nd server in the same port
Even if disposing the previous server, HttpServerFactory class was not
allowing to create a new server in the same port.

--- a/src/HttpMock.Unit.Tests/HttpMock.Unit.Tests.csproj
+++ b/src/HttpMock.Unit.Tests/HttpMock.Unit.Tests.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EndpointMatchingRuleTests.cs" />
+    <Compile Include="HttpFactoryTests.cs" />
     <Compile Include="HttpServerTests.cs" />
     <Compile Include="PortHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
