Try and change visibility. Rename Request to received request

--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ReceivedRequest.cs" />
     <Compile Include="RequestHandlerFactory.cs" />
     <Compile Include="BufferedConsumer.cs" />
     <Compile Include="EndpointMatchingRule.cs" />
