Tests use HostHelper and PortHelper to stop using hard coded ports

--- a/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
+++ b/src/HttpMock.Integration.Tests/HttpMock.Integration.Tests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="AssemblySetup.cs" />
     <Compile Include="EndpointsReturningFilesTests.cs" />
+    <Compile Include="HostHelper.cs" />
     <Compile Include="HttpEndPointTests.cs" />
     <Compile Include="HttpExpectationTests.cs" />
     <Compile Include="HttpFactoryTests.cs" />
