Move expectations to use a IRequestVerify interface

--- a/src/HttpMock/HttpMock.csproj
+++ b/src/HttpMock/HttpMock.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IRequestVerify.cs" />
     <Compile Include="RequestMatcher.cs" />
     <Compile Include="ReceivedRequest.cs" />
     <Compile Include="RequestHandlerFactory.cs" />
