--- a/src/HttpMock.Integration.Tests/App.config
+++ b/src/HttpMock.Integration.Tests/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
 	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
@@ -9,16 +9,16 @@
   </appSettings>
   <log4net>
 	<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-	  <level value="DEBUG" />
+	  <level value="DEBUG"/>
 	  <layout type="log4net.Layout.PatternLayout">
-		<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+		<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
 	  </layout>
 	</appender>
 
 	
 	<root>
-	  <level value="ALL" />
+	  <level value="ALL"/>
 	  <appender-ref ref="ConsoleAppender"/>
 	</root>
   </log4net>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
