--- a/src/HttpMock.Integration.Tests/packages.config
+++ b/src/HttpMock.Integration.Tests/packages.config
@@ -3,5 +3,5 @@
   <package id="Kayak" version="0.7.2" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="NUnit" version="2.6.4" targetFramework="net40" />
-  <package id="RhinoMocks" version="3.6.1" />
+  <package id="RhinoMocks" version="3.6.1" requireReinstallation="True" />
 </packages>
