--- a/src/HttpMock.Unit.Tests/packages.config
+++ b/src/HttpMock.Unit.Tests/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Kayak" version="0.7.2" />
   <package id="NUnit" version="2.6.4" targetFramework="net40" />
-  <package id="RhinoMocks" version="3.6.1" />
+  <package id="RhinoMocks" version="3.6.1" requireReinstallation="True" />
 </packages>
