Remove dependency on Log4Net and replace with Common.Logging

--- a/src/HttpMock/packages.config
+++ b/src/HttpMock/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="Kayak" version="0.7.2" />
-  <package id="log4net" version="2.0.5" targetFramework="net45" allowedVersions="1.2.10" />
   <package id="NUnit" version="3.4.1" targetFramework="net45" />
 </packages>
