--- a/src/HttpMock.Integration.Tests/App.config
+++ b/src/HttpMock.Integration.Tests/App.config
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <configSections>
-	<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
+    </sectionGroup>
   </configSections>
 
-  <appSettings>
-	
-  </appSettings>
-  <log4net>
-	<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-	  <level value="DEBUG"/>
-	  <layout type="log4net.Layout.PatternLayout">
-		<conversionPattern value="%date [%thread] %-5level %logger - %message%newline"/>
-	  </layout>
-	</appender>
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+        <arg key="level" value="INFO" />
+        <arg key="showLogName" value="true" />
+        <arg key="showDateTime" value="true" />
+        <arg key="dateTimeFormat" value="yyyy/MM/dd HH:mm:ss:fff" />
+      </factoryAdapter>
+    </logging>
+  </common>
 
-	
-	<root>
-	  <level value="ALL"/>
-	  <appender-ref ref="ConsoleAppender"/>
-	</root>
-  </log4net>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+  <appSettings>
+  </appSettings>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+</configuration>
