--- a/src/HttpMock.Unit.Tests/packages.config
+++ b/src/HttpMock.Unit.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
   <package id="Kayak" version="0.7.2" />
   <package id="NUnit" version="3.4.1" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" requireReinstallation="True" />
