--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,3 +29,9 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
     pathtoCustomTestAdapters: '$(Build.SourcesDirectory)\packages'
+- task: NuGetCommand@2
+  inputs:
+    command: pack
+    packagesToPack: '**/*.csproj'
+    packDestination: '$(Build.ArtifactStagingDirectory)'
+    includeSymbols: true
