uprade Nunit and add the test adapter (#101)
* uprade Nunit and add the test adapter

* uprade Nunit and add the test adapter

* add path to custom adapters

* fix interpolation

* add the test adapter

* add nuget pack

* pack nuspec only

* publish artefacts

* bump version

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,15 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+    pathtoCustomTestAdapters: '$(Build.SourcesDirectory)\packages'
+- task: NuGetCommand@2
+  inputs:
+    command: pack
+    packagesToPack: '**/*.nuspec'
+    packDestination: '$(Build.ArtifactStagingDirectory)'
+    includeSymbols: true
+    
+- task: PublishPipelineArtifact@0
+  inputs:
+    artifactName: 'nugetpackages' 
+    targetPath: '$(Build.ArtifactStagingDirectory)'
