--- a/src/HttpMock.Integration.Tests/packages.config
+++ b/src/HttpMock.Integration.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Kayak" version="0.7.2" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
-  <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="NUnit" version="3.11.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net45" />
   <package id="RhinoMocks" version="3.6.1" requireReinstallation="True" />
 </packages>
